(lang dune 3.20)

(name linearA)

(generate_opam_files true)

(source
 (github walidmenou/linear))

(authors "Walid Menou <contact@walidmenou.com>")

(license LICENSE)

(documentation https://url/to/documentation)

(package
 (name linearA)
 (synopsis "A short synopsis")
 (description "A longer description")
 (depends ocaml)
 (tags
  ("add topics" "to describe" your project)))

; See the complete stanza docs at https://dune.readthedocs.io/en/stable/reference/dune-project/index.html
