(lang dune 3.20)

(name nomad)

(generate_opam_files true)

(source
 (github walidmenou/nomad))

(authors "Walid Menou <contact@walidmenou.com>")

(license LICENSE)

(documentation https://url/to/documentation)

(package
 (name nomad)
 (synopsis "A short synopsis")
 (description "A longer description")
 (depends ocaml)
 (tags
  ("add topics" "to describe" your project)))

; See the complete stanza docs at https://dune.readthedocs.io/en/stable/reference/dune-project/index.html
